Validate Form - Client Side

--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+>
 <head>
+    <link rel="shortcut icon" th:href="@{/user/icon/java.png}">
     <meta charset="UTF-8">
     <title>Home Index</title>
 </head>
