--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -4,54 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" th:href="@{/user/css/bootstrap.min.css}">
-    <link rel="stylesheet" th:href="@{/user/css/style.css}">
-    <link rel="stylesheet" th:href="@{/user/layout-css/login.css}">
-    <script th:src="@{/user/js/bootstrap.bundle.min.js}"></script>
-    <script th:src="@{/user/js/jquery.js}"></script>
-    <script th:src="@{/user/layout-js/login.js}"></script>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/user/layout-css/pages/login.css}">
+    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+    <script th:src="@{/js/jquery.js}"></script>
+    <script th:src="@{/user/layout-js/pages/login.js}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
         const services = new Login();
-        $(document).ready(function () {
-            services.loadInit()
-        })
     </script>
     <title>Login</title>
 </head>
 <body>
-<div class="container-fluid h-100">
-    <div class="row align-items-center h-100 justify-content-center">
-        <div class="col-lg-3 col-md-8 col-sm-12">
-            <div class="form-login text-white">
-                <p class="m-0 p-0 pb-3 fs-1 text-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
-                         class="bi bi-person-workspace" viewBox="0 0 16 16">
-                        <path d="M4 16s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-5.95a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5"/>
-                        <path d="M2 1a2 2 0 0 0-2 2v9.5A1.5 1.5 0 0 0 1.5 14h.653a5.4 5.4 0 0 1 1.066-2H1V3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v9h-2.219c.554.654.89 1.373 1.066 2h.653a1.5 1.5 0 0 0 1.5-1.5V3a2 2 0 0 0-2-2z"/>
-                    </svg>
-                </p>
-                <p class="m-0 p-0 fs-1 fw-bold text-center pb-3 border-bottom">LOGIN</p>
-                <form th:action="@{/login}" method="post">
-                    <div class="my-3">
-                        <label for="username" class="form-label fw-bold">Username</label>
-                        <input type="text" name="username" id="username" class="form-control"
-                               placeholder="Enter your username">
-                    </div>
-                    <div class="mb-3 position-relative">
-                        <label for="password" class="form-label fw-bold">Password</label>
-                        <input type="password" name="password" id="password" class="form-control"
-                               placeholder="Enter your password">
-                        <button type="button" class="btn position-absolute bottom-0 end-0 btnShowPassword"
-                                onclick="services.btnShowPassword_click()"><i class="bi bi-eye-fill"
-                                                                              id="toggleShowPassword"></i></button>
-                    </div>
-                    <p class="m-0 p-0 pb-3 fs-1 text-center border-bottom"></p>
-                    <div class="my-3 text-center">
-                        <button type="submit" class="btn btn-login">Login</button>
-                    </div>
-                </form>
-            </div>
+<div class="row container-fluid h-100 align-items-center justify-content-center">
+    <div class="col-lg-3 col-md-8 col-sm-12">
+        <div class="form-login">
+            <p class="m-0 p-0 text-center" style="font-size: 4rem">
+                <i class="bi bi-person-circle p-0 m-0"></i>
+            </p>
+            <p class="m-0 p-0 fs-1 fw-bold text-center pb-3 border-bottom border-black">LOGIN</p>
+            <form>
+                <div class="my-3">
+                    <label for="username" class="form-label fw-bold">Username</label>
+                    <input type="text" name="username" id="username" class="form-control"
+                           placeholder="Enter your username">
+                </div>
+                <div class="mb-3 position-relative">
+                    <label for="password" class="form-label fw-bold">Password</label>
+                    <input type="password" name="password" id="password" class="form-control"
+                           placeholder="Enter your password" onkeypress="services.checkKeyPress(event)">
+                    <button type="button" class="btn position-absolute bottom-0 end-0 btnShowPassword"
+                            onclick="services.btnShowPassword_click()"><i class="bi bi-eye-fill"
+                                                                          id="toggleShowPassword"></i></button>
+                </div>
+                <p class="m-0 p-0 pb-3 fs-1 text-center border-bottom border-black"></p>
+                <div class="my-3 text-center">
+                    <button type="button" class="btn btn-login" onclick="services.btnLogin_click()">Login</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
