--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -12,7 +12,9 @@
     <script th:src="@{/user/layout-js/user/index.js}"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>Home Index</title>
+    <link rel="icon" th:href="@{/assets/icons/logo.png}">
     <script>
         const service = new Index()
         $(document).ready(() => {
