--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -32,7 +32,7 @@ html {
 }
 
 body {
-    background-color: var(--color-background);
+    background: linear-gradient(90deg, rgba(22,147,165,1) 0%, rgba(199,237,232,1) 100%);
     height: 100vh;
     width: 100vw;
     font-family: 'Poppins', sans-serif;
