--- a/src/main/resources/templates/user/LichHoc/LichHoc.html
+++ b/src/main/resources/templates/user/LichHoc/LichHoc.html
@@ -11,7 +11,71 @@
             serviceLichHoc.loadInit()
         })
     </script>
-    <h1>Lịch Học</h1>
+    <div class="row m-0 p-0">
+        <div class="col-md-8">
+            <h2 class="text-center">Danh sách học kỳ</h2>
+            <div class="row mb-3">
+                <div class="col-md-1 d-flex justify-content-center align-items-center">
+                    <label for="idFilterNgay" class="form-label m-0 fw-bold">Ngày</label>
+                </div>
+                <div class="col-md-2">
+                    <input type="date" id="idFilterNgay" class="form-control">
+                </div>
+            </div>
+            <div>
+                <table class="table table-responsive table-bordered table-hover border-black">
+                    <thead class="text-center">
+                    <th>No.</th>
+                    <th>Học kỳ</th>
+                    <th>Ngày bắt đầu</th>
+                    <th>Ngày kết thúc</th>
+                    </thead>
+                    <tbody class="tableSinhVien"></tbody>
+                </table>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <h2 class="text-center">Thông tin chi tiết</h2>
+            <div class="mb-3">
+                <label for="idMaHocKy" class="form-label fw-bold">Mã học kỳ</label>
+                <input type="text" class="form-control" id="idMaHocKy">
+            </div>
+            <div class="mb-3">
+                <label for="idTenHocKy" class="form-label fw-bold">Tên học kỳ</label>
+                <input type="text" class="form-control" id="idTenHocKy">
+            </div>
+            <div class="mb-3">
+                <label for="idNgayBatDau" class="form-label fw-bold">Ngày bắt đầu</label>
+                <input type="date" class="form-control" id="idNgayBatDau">
+            </div>
+            <div class="mb-3">
+                <label for="idNgayKetThuc" class="form-label fw-bold">Ngày kết thúc</label>
+                <input type="date" class="form-control" id="idNgayKetThuc">
+            </div>
+            <div class="mb-3">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="idXacNhan">
+                    <label class="form-check-label" for="idXacNhan">
+                        Xác nhận
+                    </label>
+                </div>
+            </div>
+            <div class="mb-3 text-end">
+                <button class="btn btn-primary mb-3" onclick="">
+                    <i class="fa-solid fa-rotate-right me-3"></i>
+                    Xóa form
+                </button>
+                <button class="btn btn-success mb-3" onclick="">
+                    <i class="fa-solid fa-download me-3"></i>
+                    Lưu
+                </button>
+                <button class="btn btn-danger mb-3"  onclick="">
+                    <i class="fa-solid fa-trash me-3"></i>
+                    Xóa
+                </button>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
