--- a/src/main/resources/templates/user/MonHoc/MonHoc.html
+++ b/src/main/resources/templates/user/MonHoc/MonHoc.html
@@ -11,7 +11,66 @@
             serviceMonHoc.loadInit()
         })
     </script>
-    <h1>Môn Học</h1>
+    <div class="row m-0 p-0">
+        <div class="col-md-8">
+            <h2 class="text-center">Danh sách học kỳ</h2>
+            <div class="row mb-3">
+                <div class="col-md-3 d-flex justify-content-center align-items-center">
+                    <label for="idFilterMaMonHoc" class="form-label m-0 fw-bold">Mã môn học</label>
+                </div>
+                <div class="col-md-2">
+                    <input type="text" id="idFilterMaMonHoc" class="form-control">
+                </div>
+            </div>
+            <div class="tableMonHoc">
+                <table class="table table-responsive table-bordered table-hover border-black" id="tableMonHoc">
+                    <thead class="text-center">
+                    <th>No.</th>
+                    <th>Mã môn học</th>
+                    <th>Tên môn học</th>
+                    <th>Số tín chỉ</th>
+                    </thead>
+                </table>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <h2 class="text-center">Thông tin chi tiết</h2>
+            <div class="mb-3">
+                <label for="idMaMonHoc" class="form-label fw-bold">Mã môn học</label>
+                <input type="text" class="form-control" id="idMaMonHoc">
+            </div>
+            <div class="mb-3">
+                <label for="idTenMonHoc" class="form-label fw-bold">Tên môn học</label>
+                <input type="text" class="form-control" id="idTenMonHoc">
+            </div>
+            <div class="mb-3">
+                <label for="idSoTinChi" class="form-label fw-bold">Số tín chỉ</label>
+                <input type="text" class="form-control" id="idSoTinChi">
+            </div>
+            <div class="mb-3">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox"id="idXacNhan" onchange="serviceMonHoc.verifyForm()">
+                    <label class="form-check-label" for="idXacNhan">
+                        Xác nhận
+                    </label>
+                </div>
+            </div>
+            <div class="mb-3 text-end">
+                <button class="btn btn-primary mb-3" onclick="serviceMonHoc.btnClearForm_click()">
+                    <i class="fa-solid fa-rotate-right me-3"></i>
+                    Xóa form
+                </button>
+                <button class="btn btn-success mb-3" onclick="" id="idBtnLuu" disabled>
+                    <i class="fa-solid fa-download me-3"></i>
+                    Lưu
+                </button>
+                <button class="btn btn-danger mb-3"  onclick="" id="idBtnXoa" disabled>
+                    <i class="fa-solid fa-trash me-3"></i>
+                    Xóa
+                </button>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
