--- a/src/main/resources/templates/user/SinhVien/SinhVien.html
+++ b/src/main/resources/templates/user/SinhVien/SinhVien.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div>
-                <table class="table table-responsive table-bordered table-hover border-black">
+                <table class="table table-responsive table-bordered table-hover border-black" id="tableSinhVien">
                     <thead class="text-center">
                     <th>No.</th>
                     <th>MSSV</th>
@@ -55,21 +55,21 @@
             <h2 class="text-center">Thông tin chi tiết</h2>
             <div class="mb-3">
                 <label for="idMssv" class="form-label fw-bold">Mã số sinh viên</label>
-                <input type="text" class="form-control" id="idMssv">
+                <input type="text" class="form-control" id="idMssv" onchange="serviceSinhVien.turnOffXacNhan()">
             </div>
             <div class="mb-3">
                 <label for="idHoTen" class="form-label fw-bold">Họ tên</label>
-                <input type="text" class="form-control" id="idHoTen">
+                <input type="text" class="form-control" id="idHoTen" onchange="serviceSinhVien.turnOffXacNhan()">
             </div>
             <div class="mb-3">
                 <label for="idChuyenNganh" class="form-label fw-bold">Chuyên ngành</label>
-                <input type="text" class="form-control" id="idChuyenNganh">
+                <input type="text" class="form-control" id="idChuyenNganh" onchange="serviceSinhVien.turnOffXacNhan()">
             </div>
             <div class="row">
                 <div class="col-6">
                     <div class="mb-3">
                         <label for="idHocKy" class="form-label fw-bold">Học kỳ</label>
-                        <input type="text" class="form-control" id="idHocKy">
+                        <input type="text" class="form-control" id="idHocKy" onchange="serviceSinhVien.turnOffXacNhan()">
                     </div>
                 </div>
                 <div class="col-6">
@@ -90,16 +90,17 @@
             </div>
             <div class="mb-3">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox"id="idXacNhan" onchange="serviceMonHoc.verifyForm()">
+                    <input class="form-check-input" type="checkbox" id="idXacNhan" onchange="serviceSinhVien.validateForm()">
                     <label class="form-check-label" for="idXacNhan">
                         Xác nhận
                     </label>
                 </div>
             </div>
             <div class="mb-3 text-end">
-                <button class="btn btn-primary mb-3" onclick=""><i class="fa-solid fa-rotate-right me-3"></i>Xóa form</button>
-                <button class="btn btn-success mb-3" onclick=""><i class="fa-solid fa-download me-3"></i>Lưu</button>
-                <button class="btn btn-danger mb-3"  onclick=""><i class="fa-solid fa-trash me-3"></i>Xóa</button>
+                <button class="btn btn-primary mb-3" onclick="serviceSinhVien.clearForm()"><i class="fa-solid fa-rotate-right me-3"></i>Xóa form</button>
+                <button class="btn btn-success mb-3" onclick="serviceSinhVien.btnLuu_click()"><i class="fa-solid fa-plus me-3"></i>Lưu</button>
+                <button class="btn btn-success mb-3" onclick="serviceSinhVien.btnCapNhat_click()"><i class="fa-solid fa-download me-3"></i>Cập nhật</button>
+                <button class="btn btn-danger mb-3"  onclick="serviceSinhVien.btnXoa_click()"><i class="fa-solid fa-trash me-3"></i>Xóa</button>
             </div>
         </div>
     </div>
