--- a/src/main/resources/templates/user/LichHoc/LichHoc.html
+++ b/src/main/resources/templates/user/LichHoc/LichHoc.html
@@ -22,13 +22,14 @@
                     <input type="date" id="idFilterNgay" class="form-control">
                 </div>
             </div>
-            <div>
-                <table class="table table-responsive table-bordered table-hover border-black">
+            <div class="tableLichHoc">
+                <table class="table table-responsive table-bordered table-hover border-black" id="tableLichHoc">
                     <thead class="text-center">
-                    <th>No.</th>
-                    <th>Học kỳ</th>
-                    <th>Ngày bắt đầu</th>
-                    <th>Ngày kết thúc</th>
+                        <th>No.</th>
+                        <th>Mã học kỳ</th>
+                        <th>Học kỳ</th>
+                        <th>Ngày bắt đầu</th>
+                        <th>Ngày kết thúc</th>
                     </thead>
                     <tbody class="tableSinhVien"></tbody>
                 </table>
@@ -54,24 +55,28 @@
             </div>
             <div class="mb-3">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="idXacNhan">
+                    <input class="form-check-input" type="checkbox" id="idXacNhan" onchange="serviceLichHoc.verifyForm()">
                     <label class="form-check-label" for="idXacNhan">
                         Xác nhận
                     </label>
                 </div>
             </div>
             <div class="mb-3 text-end">
-                <button class="btn btn-primary mb-3" onclick="">
+                <button class="btn btn-primary mb-3" onclick="serviceLichHoc.btnClearForm_click()">
                     <i class="fa-solid fa-rotate-right me-3"></i>
                     Xóa form
                 </button>
-                <button class="btn btn-success mb-3" onclick="">
+                <button class="btn btn-success mb-3" onclick="serviceLichHoc.btnLuu_click()" id="idBtnLuu">
                     <i class="fa-solid fa-download me-3"></i>
                     Lưu
                 </button>
-                <button class="btn btn-danger mb-3"  onclick="">
+                <button class="btn btn-danger mb-3"  onclick="serviceLichHoc.btnXoa_click()" id="idBtnXoa">
                     <i class="fa-solid fa-trash me-3"></i>
                     Xóa
+                </button>
+                <button class="btn btn-danger mb-3"  onclick="serviceLichHoc.btnCapNhat_click()" id="idBtnCapNhat">
+                    <i class="fa-solid fa-trash me-3"></i>
+                    Cập nhật
                 </button>
             </div>
         </div>
