--- a/src/main/resources/templates/user/SinhVien/SinhVien.html
+++ b/src/main/resources/templates/user/SinhVien/SinhVien.html
@@ -31,10 +31,12 @@
                     <label for="idFilterChuyenNganh" class="form-label m-0 fw-bold">CN</label>
                 </div>
                 <div class="col-md-2 d-flex justify-content-center align-items-center">
-                    <select id="idFilterChuyenNganh" class="form-select"></select>
+                    <select id="idFilterChuyenNganh" class="form-select">
+
+                    </select>
                 </div>
                 <div class="col-md-1">
-                    <button class="btn btn-dark rounded rounded-circle"><i class="fa-solid fa-magnifying-glass"></i></button>
+                    <button class="btn btn-dark rounded rounded-circle" onclick="serviceSinhVien.fillterSinhVien()"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </div>
             </div>
             <div>
