--- a/src/main/resources/templates/user/SinhVien/SinhVien.html
+++ b/src/main/resources/templates/user/SinhVien/SinhVien.html
@@ -100,9 +100,9 @@
             </div>
             <div class="mb-3 text-end">
                 <button class="btn btn-primary mb-3" onclick="serviceSinhVien.clearForm()"><i class="fa-solid fa-rotate-right me-3"></i>Xóa form</button>
-                <button class="btn btn-success mb-3" onclick="serviceSinhVien.btnLuu_click()"><i class="fa-solid fa-plus me-3"></i>Lưu</button>
-                <button class="btn btn-success mb-3" onclick="serviceSinhVien.btnCapNhat_click()"><i class="fa-solid fa-download me-3"></i>Cập nhật</button>
-                <button class="btn btn-danger mb-3"  onclick="serviceSinhVien.btnXoa_click()"><i class="fa-solid fa-trash me-3"></i>Xóa</button>
+                <button class="btn btn-success mb-3" id="btnLuu" onclick="serviceSinhVien.btnLuu_click()"><i class="fa-solid fa-plus me-3"></i>Lưu</button>
+                <button class="btn btn-success mb-3" id="btnCapNhat" onclick="serviceSinhVien.btnCapNhat_click()"><i class="fa-solid fa-download me-3"></i>Cập nhật</button>
+                <button class="btn btn-danger mb-3" id="btnXoa" onclick="serviceSinhVien.btnXoa_click()"><i class="fa-solid fa-trash me-3"></i>Xóa</button>
             </div>
         </div>
     </div>
