--- a/src/main/resources/templates/user/BangDiem/BangDiem.html
+++ b/src/main/resources/templates/user/BangDiem/BangDiem.html
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="col-md-1">
-                    <button class="btn btn-dark rounded rounded-circle"><i class="fa-solid fa-magnifying-glass"></i></button>
+                    <button class="btn btn-dark rounded rounded-circle" onclick="serviceBangDiem.filterBangDiem()"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </div>
             </div>
             <div>
@@ -58,27 +58,27 @@
             <h2 class="text-center">Thông tin chi tiết</h2>
             <div class="mb-3">
                 <label for="idMssv" class="form-label fw-bold">Mã số sinh viên</label>
-                <input type="text" class="form-control" id="idMssv">
+                <input type="text" class="form-control" id="idMssv" onchange="serviceBangDiem.turnOffXacNhan()">
             </div>
             <div class="mb-3">
                 <label for="idHoTen" class="form-label fw-bold">Họ tên</label>
-                <input type="text" class="form-control" id="idHoTen">
+                <input type="text" class="form-control" id="idHoTen" onchange="serviceBangDiem.turnOffXacNhan()">
             </div>
             <div class="mb-3">
                 <label for="idMonHoc" class="form-label fw-bold">Môn học</label>
-                <input type="text" class="form-control" id="idMonHoc">
+                <input type="text" class="form-control" id="idMonHoc" onchange="serviceBangDiem.turnOffXacNhan()">
             </div>
             <div class="row">
                 <div class="col-6">
                     <div class="mb-3">
                         <label for="idHocKy" class="form-label fw-bold">Học kỳ</label>
-                        <input type="text" class="form-control" id="idHocKy">
+                        <input type="text" class="form-control" id="idHocKy" onchange="serviceBangDiem.turnOffXacNhan()">
                     </div>
                 </div>
                 <div class="col-6">
                     <div class="mb-3">
                         <label for="idLanThi" class="form-label fw-bold">Lần thi</label>
-                        <input type="text" class="form-control" id="idLanThi">
+                        <input type="text" class="form-control" id="idLanThi" onchange="serviceBangDiem.turnOffXacNhan()">
                     </div>
                 </div>
             </div>
@@ -109,9 +109,9 @@
 
             <div class="mb-3 text-end">
                 <button class="btn btn-primary mb-3" onclick="serviceBangDiem.clearForm()"><i class="fa-solid fa-rotate-right me-3"></i>Xóa form</button>
-                <button class="btn btn-success mb-3" onclick="serviceBangDiem.btnLuu_click(true)"><i class="fa-solid fa-download me-3"></i>Lưu</button>
-                <button class="btn btn-success mb-3" onclick="serviceBangDiem.btnLuu_click(false)"><i class="fa-solid fa-plus me-3"></i>Thêm</button>
-                <button class="btn btn-danger mb-3"  onclick=""><i class="fa-solid fa-trash me-3"></i>Xóa</button>
+                <button class="btn btn-success mb-3" id="btnLuu" onclick="serviceBangDiem.btnLuu_click(false)"><i class="fa-solid fa-download me-3"></i>Lưu</button>
+                <button class="btn btn-success mb-3" id="btnCapNhat" onclick="serviceBangDiem.btnLuu_click(true)"><i class="fa-solid fa-plus me-3"></i>Cập nhật</button>
+                <button class="btn btn-danger mb-3" id="btnXoa" onclick="serviceBangDiem.btnXoa_click()"><i class="fa-solid fa-trash me-3"></i>Xóa</button>
             </div>
         </div>
     </div>
