--- a/src/main/resources/templates/user/LichHoc/LichHoc.html
+++ b/src/main/resources/templates/user/LichHoc/LichHoc.html
@@ -69,15 +69,15 @@
                     <i class="fa-solid fa-rotate-right me-3"></i>
                     Xóa form
                 </button>
-                <button class="btn btn-success mb-3" onclick="serviceLichHoc.btnLuu_click()" id="idBtnLuu">
+                <button class="btn btn-success mb-3" onclick="serviceLichHoc.btnLuu_click()" id="idBtnLuu" disabled>
                     <i class="fa-solid fa-download me-3"></i>
                     Lưu
                 </button>
-                <button class="btn btn-danger mb-3"  onclick="serviceLichHoc.btnXoa_click()" id="idBtnXoa">
+                <button class="btn btn-danger mb-3"  onclick="serviceLichHoc.btnXoa_click()" id="idBtnXoa" disabled>
                     <i class="fa-solid fa-trash me-3"></i>
                     Xóa
                 </button>
-                <button class="btn btn-info mb-3"  onclick="serviceLichHoc.btnCapNhat_click()" id="idBtnCapNhat">
+                <button class="btn btn-info mb-3"  onclick="serviceLichHoc.btnCapNhat_click()" id="idBtnCapNhat" disabled>
                     <i class="fa-solid fa-pen me-3"></i>
                     Cập nhật
                 </button>
