--- a/src/main/resources/templates/user/ThongKe/ThongKe.html
+++ b/src/main/resources/templates/user/ThongKe/ThongKe.html
@@ -36,8 +36,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-auto d-flex align-items-center justify-content-center">
-            <button class="btn btn-success" onclick="serviceThongKe.getDataChart()">Tìm</button>
+        <div class="col-md-1">
+            <button class="btn btn-dark rounded rounded-circle"><i class="fa-solid fa-magnifying-glass" onclick="serviceThongKe.getDataChart()"></i></button>
         </div>
     </div>
     <div class="row">
