NguyenKhoi_commit07:update BarChart ThongKe

--- a/src/main/resources/templates/user/ThongKe/ThongKe.html
+++ b/src/main/resources/templates/user/ThongKe/ThongKe.html
@@ -41,8 +41,8 @@
         </div>
     </div>
     <div class="row">
-        <div class="col"><canvas id="myChart" width="200px" height="100px"></canvas></div>
-        <div class="col"><canvas id="barChart" width="200px" height="100px"></div>
+        <div class="col-5"><canvas id="myChart" width="200px" height="100px"></canvas></div>
+        <div class="col"><canvas id="barChart" width="200px" height="100px"></canvas></div>
     </div>
 </div>
 </body>
